added tests and some optimisations